chore(github): implement smart automatic weekly build

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,28 +1,15 @@
-name: Build and Release
+name: "publish@main: Build and Release"
+
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - src/hold-accelerate.ts
-      - .github/workflows/publish.yaml
-      - package.json
-      - package-lock.json
-  pull_request:
-    branches:
-      - main
-    paths:
-      - src/hold-accelerate.ts
-      - .github/workflows/publish.yaml
-      - package.json
-      - package-lock.json
+  workflow_call:
   workflow_dispatch:
 
 jobs:
   publish:
-    runs-on: ubuntu-latest
     permissions:
       contents: write
+
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -42,7 +29,7 @@ jobs:
       - name: Generate release tag
         id: tag
         run: |
-          echo "release_tag=$(date +%Y.%m.%d_%H-%M)" >> "$GITHUB_ENV"
+          echo "release_tag=$(date +%Y.%m.%d)" >> "$GITHUB_ENV"
 
       - name: Release
         uses: softprops/action-gh-release@v1
