--- a/.github/workflows/publish@watcher.yaml
+++ b/.github/workflows/publish@watcher.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - src/hold-accelerate.ts
+      - src/main.ts
       - .github/workflows/publish.yaml
       - package.json
       - pnpm-lock.yaml
