--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "declaration": true,
     "outDir": "./dist",
     "strict": true,
+    "exactOptionalPropertyTypes": true,
     "noEmitOnError": true,
     "esModuleInterop": true
   },
