--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -36,14 +36,21 @@ jobs:
         run: |
           echo "release_tag=$(date +%Y.%m.%d)" >> "$GITHUB_ENV"
 
+      - name: Generate the changelog
+        uses: orhun/git-cliff-action@v3
+        id: git-cliff
+        with:
+          args: -vv --unreleased --tag=${{ env.release_tag }} --strip=header
+
       - name: Release
         uses: softprops/action-gh-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ env.release_tag }}
+          body: ${{ steps.git-cliff.outputs.content }}
           files: |
             dist/hold-accelerate.js
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Cleanup Old Releases
         uses: dev-drprasad/delete-older-releases@v0.3.2
