--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -44,7 +44,7 @@ jobs:
           args: -vv --unreleased --tag=${{ env.release_tag }} --strip=header
 
       - name: Release
-        uses: softprops/action-gh-release@975c1b265e11dd76618af1c374e7981f9a6ff44a
+        uses: softprops/action-gh-release@3198ee18f814cdf787321b4a32a26ddbf37acc52 # v2
         with:
           tag_name: ${{ env.release_tag }}
           body: ${{ steps.git-cliff.outputs.content }}
