--- a/.github/workflows/publish@watcher.yaml
+++ b/.github/workflows/publish@watcher.yaml
@@ -15,7 +15,7 @@ jobs:
           (startsWith(github.event.head_commit.message, 'refactor') ||
           (startsWith(github.event.head_commit.message, 'fix') && !startsWith(github.event.head_commit.message, 'fixup!')) ||
           startsWith(github.event.head_commit.message, 'feat') ||
-          (startsWith(github.event.head_commit.message, 'chore') && !startsWith(github.event.head_commit.message, 'chore(dev') && !startsWith(github.event.head_commit.message, 'chore(github'))) }}
+          (startsWith(github.event.head_commit.message, 'chore') && !startsWith(github.event.head_commit.message, 'chore(deps') && !startsWith(github.event.head_commit.message, 'chore(github'))) }}
         uses: action-pack/set-variable@c745021a3a403ab9cc351b4aabe3e528f22d9937 # v1
         with:
           name: "SHOULD_PUBLISH"
