--- a/.github/workflows/issue@auto-close-stale.yaml
+++ b/.github/workflows/issue@auto-close-stale.yaml
@@ -14,8 +14,7 @@ jobs:
       - uses: actions/stale@28ca1036281a5e5922ead5184a1bbf96e5fc984e # v9
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
+          days-before-issue-stale: 7
           stale-issue-label: stale
-          days-before-stale: 7
-          days-before-close: 7
           stale-issue-message: ""
           close-issue-message: "This issue has been automatically closed due to 14 days of inactivity; feel free to reopen it if necessary."
